# presentink

./: .gitignore  CNAME  Info.plist  KeyTyper  LICENSE.md  about-preload.js  about.html  breaktimer.html  copyversion.ps1  entitlements.plist  help.html  icon.icns  index.html  main.js  overlay.html  package-lock.json  package.json  preferences.html  preload.js  readme.md  renderer.js  screenshot.html  settings.html  settings.js  splash.html  tsconfig.json  vite.config.ts  webpack.config.js
PresentInk/: AppDelegate.swift  CountdownOverlayWindowController.swift  DrawingView.swift  HelpWindowController.swift  KbdView.swift  Localizable.xcstrings  OverlayWindowController.swift  PresentInk.entitlements  ScreenRecordRectangleController.swift  ScreenRecordRectangleWindow.swift  ScreenRecorder.swift  ScreenSelectionDialog.swift  ScreenSelectionOverlayWindowController.swift  ScreenShotWindow.swift  ScreenShotWindowController.swift  Settings.swift  SplashWindowController.swift  ViewController.swift  main.swift
PresentInk.xcodeproj/: project.pbxproj
PresentInk.xcodeproj/xcshareddata/xcschemes/: PresentInk.xcscheme
PresentInk/Assets.xcassets/BuyMeACoffee.imageset/: Contents.json
PresentInk/Assets.xcassets/FirstRunBreaktime.imageset/: Contents.json
PresentInk/Assets.xcassets/TrayIconBlue.imageset/: Contents.json
PresentInk/Assets.xcassets/TrayIconDefault.imageset/: Contents.json
PresentInk/BreakTimer/: BreakTimerWindow.swift  BreakTimerWindowController.swift
PresentInk/Drawing/: DrawWindowController.swift  DrawingView.swift
PresentInk/Help/: Help.xcstrings  HelpWindowController.swift
PresentInk/Helpers/: ClickImageButton.swift  KbdView.swift  SplashWindowController.swift  TextTyper.swift  UpdateChecker.swift
PresentInk/LiveCaptionsManager/: LiveCaptionsManager.swift  LiveCaptionsOverlayWindow.swift
PresentInk/Magnifier/: MagnifierOverlayView.swift
PresentInk/Preferences/: AboutSettingsView.swift  BreakTimerSettingsView.swift  DrawSettingsView.swift  GeneralSettingsView.swift  LiveCaptionsSettingsView.swift  RecordingSettingsView.swift  Settings.swift  SettingsWindowController.swift  ShortcutsSettingsView.swift  SidebarButtonView.swift  SidebarHoverButton.swift  TextTyperSettingsView.swift  UpdateSettingsView.swift
PresentInk/Recording/: ScreenRecordCroppedController.swift  ScreenRecordCroppedView.swift  ScreenRecordCroppedWindow.swift  ScreenRecordRectangleView.swift  ScreenRecorder.swift  ScreenSelectionDialog.swift  ScreenSelectionOverlayWindowController.swift
PresentInk/Screenshots/: ScreenShotWindow.swift  ScreenShotWindowController.swift
PresentInk/Spotlight/: SpotlightOverlayWindow.swift
PresentInk/Timer/: PresentationTimerOverlayView.swift  PresentationTimerWindow.swift  PresentationTimerWindowController.swift
PresentInk/Welcome/: WelcomeWindowController.swift
icons/: build.ps1
package/: background@2x.xcf  license.rtf  package.ps1
src/: ScriptAction.ts  about-preload.js  about-preload.ts  about.html  about.ts  breaktimer-preload.js  breaktimer-preload.ts  breaktimer.html  breaktimer.ts  distpackage.json  global.d.ts  help.html  help.ts  index.html  main.ts  overlay.html  overlay.ts  preferences.ts  preload.ts  renderer.ts  screenshot.ts  settings.html  settings.ts  splash.html  splash.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: desktop.json
src-tauri/icons/: presentink.icns
src-tauri/src/: lib.rs  main.rs  screen_capture_permissions.rs  settings.rs
src/types/: ScriptAction.d.ts
(+7 files in other folders)
